# heat-solver

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  mail.cpp
lib/: CMakeLists.txt  cg.hpp  heat.hpp  matrix.hpp  vector.hpp
